# QoreLogic

./: .dockerignore  .gitignore  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF_SUMMARY.json  LICENSE  Launch_QoreLogic.bat  PRE_COMMIT_AUDIT.md  README.md  RESEARCH_BRIEF.md  audit_runner.py  docker-compose.yml  fix_db.py  llms.txt  lock_manager.ps1  migrate_brand.py  mkdocs.yml  pyproject.toml  qdna.py  qorelogic-d.py  qorelogic.py  requirements.txt  seed_qdna.py  seed_qorelogic.py  start_system.ps1  update_db_schema.py
.githooks/: pre-commit
config/: workflow_map.json
docs/: AGENT_ACCOUNTABILITY_CONTRACT.md  API_CONTRACT_VERIFICATION.md  ARCHITECTURE.md  ARCHITECTURE_PLAN.md  Agent Accountability Contract.docx  BACKLOG.md  CONCEPT.md  DEVELOPER_MANUAL.md  DEVELOPMENT_PLAN.md  DOCUMENTATION_ALIGNMENT_SUMMARY.md  E2E_ARCHITECTURE_REVIEW.md  EXTERNAL_TOOL_MANIFEST.md  FORMAL_VERIFICATION_STATUS.md  MERKLE_ITERATION_GUIDE.md  META_LEDGER.md  PRD.md  PROCESS_SHADOW_GENOME_UPSTREAM.md  Q-DNA_SPECIFICATION.md  QoreLogic_SPECIFICATION.md  RESEARCH_BRIEF.md  RESEARCH_VS_REALITY_v2.md  ROI_CASE_STUDY.md  SECURITY_AUDIT.md  SHADOW_GENOME.md  SKILL_AUDIT_CHECKLIST.md  SKILL_REGISTRY.md  SPEC_COMPLIANCE_AUDIT.md  SYSTEM_STATE.md  TESTING_STRATEGY.md  TEST_COVERAGE_ANALYSIS.md  TRANSITION_REPORT_V2.5.md  TRUST_MODEL_VALIDATION.md  architecture.md  compliance-re-evaluation-2026-04-29.md  cutover-manifest-2026-04-15.json  index.md  lifecycle.md  migration-manifest-post.json  operations.md  phase31-drift-triage-report.md  (+56 more)
launcher/: Launch_QoreLogic.bat  Launcher.html  server.ps1
local_fortress/: Dockerfile.dist  Dockerfile.native  bridge.py  deploy_isolated.ps1  install_hook.ps1  migrate_workspace_isolation.py  qorelogic-check.bat  setup.py  validate_db.py
processed/: ql-audit.md  ql-document.md  ql-help.md  ql-plan.md  ql-refactor.md  ql-validate.md
qor/: __init__.py  cli.py  cli_policy.py  hosts.py  install.py  resources.py  seed.py  workdir.py
research/: README.md
scripts/: commit-msg  gate-skill-matrix.py  pre-commit
src/: README.md
tests/: _helpers.py  audit_challenge.py  conftest.py  test_ab_aggregator.py  test_ai_provenance_helper.py  test_ai_provenance_schema.py  test_archive_path_exclusion.py  test_attribution.py  test_attribution_docs_consistency.py  test_attribution_tiered_negative_paths.py  test_attribution_tiered_usage.py  test_audit_drift_auto_invoked.py  test_audit_drift_notice.py  test_audit_gate_artifact.py  test_audit_gate_emits_findings_categories.py  test_audit_history.py  test_cedar_subagent_admission.py  test_changelog_format.py  test_changelog_stamp.py  test_changelog_tag_coverage.py  test_check_surface_d.py  test_check_surface_e.py  test_ci_workflow_gate_chain_completeness.py  test_cli.py  test_cli_rename.py  test_cli_version_from_metadata.py  test_collect.py  test_compile.py  test_compliance_ai_provenance_cli.py  test_compliance_report_post_phase52.py  test_contributing_quickstart.py  test_cycle_count_escalator.py  test_dist_recompile_on_seal.py  test_doc_integrity.py  test_doc_integrity_drift_report_cli.py  test_doctrine_ai_rmf_anchored.py  (+123 more)
(+557 files in other folders)
