[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qorelogic"
version = "0.2.0"
description = "QoreLogic S.H.I.E.L.D. governance skills for Claude Code, Kilo Code, and future AI coding hosts"
requires-python = ">=3.11"
license = { text = "Proprietary" }

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live environment probes; opt-in via '-m integration'",
]
