[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qor-logic"
version = "0.6.0"
description = "QorLogic S.H.I.E.L.D. governance skills for Claude Code, Kilo Code, and future AI coding hosts"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = ["jsonschema>=4"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live environment probes; opt-in via '-m integration'",
]
