[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qor-logic"
version = "0.38.0"
description = "Qor-logic S.H.I.E.L.D. governance skills for Claude Code, Kilo Code, and future AI coding hosts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSL-1.1" }
authors = [{ name = "MythologIQ Labs, LLC" }]
keywords = ["governance", "ai", "claude-code", "kilo-code", "codex", "sdlc", "skills"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["jsonschema>=4", "PyYAML>=6"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
qor-logic = "qor.cli:main"
qorlogic = "qor.cli:main"

[project.urls]
Homepage = "https://github.com/MythologIQ-Labs-LLC/Qor-logic"
Repository = "https://github.com/MythologIQ-Labs-LLC/Qor-logic"
Issues = "https://github.com/MythologIQ-Labs-LLC/Qor-logic/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["qor*"]
exclude = ["qor.vendor*", "qor.experimental*", "tests*"]

[tool.setuptools.package-data]
qor = [
    "skills/**/*.md",
    "references/*.md",
    "agents/**/*.md",
    "gates/*.md",
    "gates/schema/*.json",
    "platform/**/*.md",
    "policies/*.cedar",
    "templates/*.md",
    "templates/*",
    "dist/variants/**/*.md",
    "dist/variants/**/*.json",
    "dist/variants/**/*.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: live environment probes; opt-in via '-m integration'",
]
